--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <h1>features</h1>
     <ul>
       <li>
-        <img src="/images/feature1.png" alt="">
+        <img src="./images/feature1.png" alt="">
         <div class="feature-details">
         <dt><strong>トリック</strong>が上手！</dt>
         <dd>kenkenに命令してあげたら、いつも従ってくれる！なかなか賢くて可愛いわんちゃんでああります〜</dd>
@@ -79,10 +79,10 @@
         <dd>わんちゃんが普通できないものはkenkenならできる！果たしてあなたはkenkenに勝てることはできるのか？！
       </dd>
       </div>
-      <img src="/images/feature2.png" alt="">
+      <img src="./images/feature2.png" alt="">
     </li>
       <li>
-        <img src="/images/feature3.png" alt="">
+        <img src="./images/feature3.png" alt="">
         <div class="feature-details">
           <dt><strong>話相手</strong>になれる！</dt>
           <dd>最近の出来事や悩み事があればkenkenにいつでも相談できます！わんちゃんなりに癒しさをあげて楽しく会話してね〜</dd>
@@ -93,7 +93,7 @@
     <h3>・</h3>
     <h3>・</h3>
     <h3>それ以外もいっぱい機能が<br>ついております！</h3>
-    <h3>お試してみてください！</h3>
+    <h3>試してみてください！</h3>
   </div>
   
   <div class="chatbot-intro">
