Front Page edit

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </head>
 
 <body>
-  
+  <div class="body-border">
   <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
   <df-messenger chat-icon="./images/kenken2.png" chat-title="kenken" intent="WELCOME"
     agent-id="fa3897eb-30f5-42da-9ef3-c3b109c04a02" language-code="ja" wait-open="true"></df-messenger>
@@ -99,9 +99,9 @@
   <div class="chatbot-intro">
   
     <h1>お待たせいたしました！<br>今すぐkenkenとお会いしましょう！</h1>
-    <img src="images/kenken_maneki_crop.png" alt="" class="kenken_maneki">
+    <img src="/images/kenken_maneki_crop.png" class="maneki">
 
-    <img src="images/arrow.png" class="arrow">
+    <img src="/images/arrow.png" class="arrow">
     
   </div>
   
@@ -119,6 +119,7 @@
   <audio loop autoplay>
     <source src="/music/animation-childlike-claps-playful-cute-bright-happy-music-20852.mp3" type="audio/mpeg">
   </audio>
+</div>
 
 </body>
 
