--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
 
   <div class="glass">
 
-    <div class="tanjou-hand">
+    <!-- <div class="tanjou-hand">
       <img src="images/kenken_hp_hand.png" alt="">
-    </div>
+    </div> -->
     <div class="glass-img">
-      <img src="./images/glass.png" alt="" >
+      <img src="./images/glass-hand.png" alt="" >
     </div>
     <div class="glass-text">
       <h3><strong>わんちゃん！</strong>ではなく</h3>
