--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width">
+  <meta name="viewport" content="width=device-width" initial-scale="1.0">
   <title>KenKen</title>
 
 
@@ -57,7 +57,7 @@
     <div class="glass-img">
       <img src="./images/glass-hand.png" alt="" >
     </div>
-    
+
     <div class="glass-text">
       <h3><strong>わんちゃん！</strong>ではなく</h3>
       <h3><strong>ロボット！</strong>でもなく</h3>
