--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
   <div class="chatbot-intro">
   
     <h1>お待たせいたしました！<br>今すぐkenkenとお会いしましょう！</h1>
-    <img src="/images/kenken_maneki_crop.png" class="maneki">
+    <img src="./images/kenken_maneki_crop.png" class="maneki">
 
-    <img src="/images/arrow.png" class="arrow">
+    <img src="./images/arrow.png" class="arrow">
     
   </div>
   
